<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".UpdateActivity"
android:background="@drawable/update_activity"
android:padding="8dp">

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/title_textInput"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/title_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/update_title"
        android:inputType="textCapSentences"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/author_textInput"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/title_textInput"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/author_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/update_author"
        android:inputType="textCapSentences"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/isbn_textInput"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/author_textInput"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/isbn_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/update_isbn"
        android:inputType="number"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/genre_textInput"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/isbn_textInput"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/genre_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/update_genre"
        android:inputType="textCapSentences"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/notes_textInput"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/genre_textInput"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/notes_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/update_notes"
        android:inputType="textMultiLine|textCapSentences"/>
</com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>